@@ -51,6 +51,42 @@ BODY {
 #button2img  { z-index: 3; position: absolute; top: 180px; left: 11px; width: 111px; height: 23px; }
 #button2text { font-size: 10px; font-family: "Trebuchet MS", Arial, Tahoma; position: absolute; z-index: 2; top: 180px; left: 11px; width: 111px; height: 23px; padding: 1px}
 #button2bg   { z-index: 1; position: absolute; top: 180px; left: 11px; width: 111px; height: 23px; }
+
+#button3img  { z-index: 3; position: absolute; top: 210px; left: 11px; width: 111px; height: 23px; }
+#button3text { font-size: 10px; font-family: "Trebuchet MS", Arial, Tahoma; position: absolute; z-index: 2; top: 210px; left: 11px; width: 111px; height: 23px; padding: 1px}
+#button3bg   { z-index: 1; position: absolute; top: 210px; left: 11px; width: 111px; height: 23px; }
+
+#button4img  { z-index: 3; position: absolute; top: 240px; left: 11px; width: 111px; height: 23px; }
+#button4text { font-size: 10px; font-family: "Trebuchet MS", Arial, Tahoma; position: absolute; z-index: 2; top: 240px; left: 11px; width: 111px; height: 23px; padding: 1px}
+#button4bg   { z-index: 1; position: absolute; top: 240px; left: 11px; width: 111px; height: 23px; }
+
+#button5img  { z-index: 3; position: absolute; top: 270px; left: 11px; width: 111px; height: 23px; }
+#button5text { font-size: 10px; font-family: "Trebuchet MS", Arial, Tahoma; position: absolute; z-index: 2; top: 270px; left: 11px; width: 111px; height: 23px; padding: 1px}
+#button5bg   { z-index: 1; position: absolute; top: 270px; left: 11px; width: 111px; height: 23px; }
+
+#button6img  { z-index: 3; position: absolute; top: 300px; left: 11px; width: 111px; height: 23px; }
+#button6text { font-size: 10px; font-family: "Trebuchet MS", Arial, Tahoma; position: absolute; z-index: 2; top: 300px; left: 11px; width: 111px; height: 23px; padding: 1px}
+#button6bg   { z-index: 1; position: absolute; top: 300px; left: 11px; width: 111px; height: 23px; }
+
+
+#button7img  { z-index: 3; position: absolute; top: 330px; left: 11px; width: 111px; height: 23px; }
+#button7text { font-size: 10px; font-family: "Trebuchet MS", Arial, Tahoma; position: absolute; z-index: 2; top: 330px; left: 11px; width: 111px; height: 23px; padding: 1px}
+#button7bg   { z-index: 1; position: absolute; top: 330px; left: 11px; width: 111px; height: 23px; }
+
+
+#button8img  { z-index: 3; position: absolute; top: 360px; left: 11px; width: 111px; height: 23px; }
+#button8text { font-size: 10px; font-family: "Trebuchet MS", Arial, Tahoma; position: absolute; z-index: 2; top: 360px; left: 11px; width: 111px; height: 23px; padding: 1px}
+#button8bg   { z-index: 1; position: absolute; top: 360px; left: 11px; width: 111px; height: 23px; }
+
+#button9img  { z-index: 3; position: absolute; top: 390px; left: 11px; width: 111px; height: 23px; }
+#button9text { font-size: 10px; font-family: "Trebuchet MS", Arial, Tahoma; position: absolute; z-index: 2; top: 390px; left: 11px; width: 111px; height: 23px; padding: 1px}
+#button9bg   { z-index: 1; position: absolute; top: 390px; left: 11px; width: 111px; height: 23px; }
+
+#button10img  { z-index: 3; position: absolute; top: 420px; left: 11px; width: 111px; height: 23px; }
+#button10text { font-size: 10px; font-family: "Trebuchet MS", Arial, Tahoma; position: absolute; z-index: 2; top: 420px; left: 11px; width: 111px; height: 23px; padding: 1px}
+#button10bg   { z-index: 1; position: absolute; top: 420px; left: 11px; width: 111px; height: 23px; }
+
+
 </style>
 	</head>
 
@@ -73,7 +109,6 @@ $ ICON
 		<tr width="650"><td valign="middle" align="right" height="9" width="97"><a target="_blank" href="http://www.unrealircd.com/" onMouseOver="document.unreallink.src='../unrealircd.com/active.gif';" onMouseOut="document.unreallink.src='../unrealircd.com/inactive.gif';"><img src="../unrealircd.com/inactive.gif" name="unreallink" border="0"></a></td>
 $ STATUSLINE
 
-<!-- statusline	<td align="center" height="9" width="450"><table width="398" height="9" border="0" cellspacing="0" cellpadding="0"><tr><td valign="top" align="center"><span class="status">Status Text goes here</span></td></tr></table></td><td align="right" height="9" width="159"><img src="../back/grad.jpg"></td></tr></table> -->
 		
 		
 		</div>
